# rfid-attendance

./: .gitignore  README.md  requirements.txt  run.py
Phidget22Python/: setup.py
TagReader/: tag_reader.py
TagReader/templates/: welcome.html
libphidget22-1.1.20190415/: ChangeLog  Makefile  README  config.status  configure  libphidget22.pc  libtool  phidget22.h
libphidget22-1.1.20190415/src/: constants.c  devices.gen.c  devices.gen.h  dispatch.c  enumutil.gen.c  macros.h  phidget.c  phidget.h  phidget22.c  supportedpacket.gen.c  types.gen.h  vintpackets.c  vintpackets.gen.c  vintpackets.h
libphidget22extra-1.1.20190415/: ChangeLog  Makefile  README  config.status  configure  libphidget22extra.la  libphidget22extra.pc  libtool
libphidget22extra-1.1.20190415/.libs/: libphidget22extra.lai  libphidget22extra.so.0.0.0
libphidget22extra-1.1.20190415/src/: pconf.c
phidget22admin-1.1.20190415/: Makefile  Makefile.am  Makefile.in  README  config.status  configure  main.c  phidget22admin  phidgetadmin.h
phidget22admin-1.1.20190415/.deps/: main.Po
phidget22networkserver-1.1.20190415/: Makefile  README  config.status  configure  configure.ac  libtool  phidget22networkserver
phidget22networkserver-1.1.20190415/src/: server.c  server.h
tag_reader/: __init__.py  config.py  database_setup.py  models.py  tag_reader.py
tag_reader/main/: __init__.py  views.py
tag_reader/static/: main.css
tag_reader/templates/: about.html  attendance.html  dashboard.html  home.html  layout.html  login.html  register.html  welcome.html
tag_reader/users/: forms.py  utils.py  (+1 more)
(+225 files in other folders)
